--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=test-app
-sonar.projectName=Test App
+sonar.projectKey=Sonarqube-demo
+sonar.projectName=Sonarqube-demo
 sonar.projectVersion=1.0
 sonar.sources=.
+sonar.sourceEncoding=UTF-8
