--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.projectName=Sonarqube-demo
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://13.202.64.87:9000
+sonar.host.url=https://sonar.eitconsultant.com/
 
