--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=Sonarqube-demo
-sonar.projectName=Sonarqube-demo
+sonar.projectKey=Test-demo
+sonar.projectName=Test-demo
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
